# sep2_common

./: .gitignore  README.md
common/: Cargo.toml
common-derive/: Cargo.toml
common-derive/src/: lib.rs  list.rs
common/src/: README.md  config.rs  examples.rs  identification.rs  lib.rs  object.rs  objects.rs  primitives.rs  server.rs  subscription.rs  tls.rs  traits.rs  types.md  types.rs  xsd.rs
common/tests/: gen.rs  identification.rs  mod.rs  objects.rs
macros/: Cargo.toml
macros/src/: lib.rs
sep2_common/: Cargo.toml
sep2_common/src/: lib.rs  traits.rs
sep2_common/tests/: README.md
sep2_common_derive/: Cargo.toml
sep2_common_derive/src/: lib.rs
