[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaserde = { git = "https://github.com/ethanndickson/yaserde" }
yaserde_derive = { git = "https://github.com/ethanndickson/yaserde" }
xsd-types = { git = "https://github.com/ethanndickson/xsd-parser-rs" }
xsd-macro-utils = { git = "https://github.com/ethanndickson/xsd-parser-rs" }
xsd-parser = { git = "https://github.com/ethanndickson/xsd-parser-rs" }
xml-rs = "0.8.4"
hyper = { version = "0.14.27", features = ["server", "http1", "http2", "tcp"] }
openssl = "0.10.55"
tokio = { version = "1.29.1", features = ["full"] }
tokio-openssl = "0.6.3"
log = "0.4.19"
anyhow = "1.0.72"
async-trait = "0.1.72"
