[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-derive = {path = "../common-derive"}
yaserde = { git = "https://github.com/ethanndickson/yaserde", features = ["yaserde_derive"]}
xml-rs = "0.8.4"
log = "0.4.19"
anyhow = "1.0.72"
bitflags = "2.4.0"

[features]
default = []
examples = []
