[package]
name = "sep2_common"
version = "0.1.0"
authors = ["Ethan Dickson <ethanndickson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sep2_common_derive = {path = "../common-derive"}
yaserde = { git = "https://github.com/ethanndickson/yaserde", features = ["yaserde_derive"]}
xml-rs = "0.8.4"
log = "0.4.19"
anyhow = "1.0.72"
bitflags = "2.4.0"
rand = "0.8.5"

[features]
default = []
examples = []
dcap = ["fsa"]
edev = []
fsa = []
pubsub = []
response = []
time = []
di = ["power_status"]
power_status = ["der"]
network_status = []
log_events = []
configuration = []
software_download = []
drlc = ["der","response"]
metering = ["metering_mirror"]
metering_mirror = ["metering"]
pricing = ["response"]
messaging = ["response"]
billing = ["metering_mirror"]
prepayment = ["metering"]
flow_reservation = ["der"]
der = ["response"]
csip_aus = ["edev","der"]
all = [
    "examples",
    "dcap",
    "edev",
    "fsa",
    "pubsub",
    "response",
    "time",
    "di",
    "power_status",
    "network_status",
    "log_events",
    "configuration",
    "software_download",
    "drlc",
    "metering",
    "metering_mirror",
    "pricing",
    "messaging",
    "billing",
    "prepayment",
    "flow_reservation",
    "der",
    "csip_aus"
]